<resources>
    <string name="app_name">GitHub client</string>
    <string name="decryption_image_owner">Image Owner</string>
    <string name="search_repositories">Search repositories</string>

    <string name="description_subscribers_image">Subscribers Image</string>
    <string name="description_forks_image">Forks Image</string>
    <string name="description_stars_image">Stars Image</string>
    <string name="description_github_logo">GitHub logo</string>
    <string name="description_search_repositories">Search repositories</string>
    <string name="description_repository_language">Repository Language</string>

    <string name="loading">Loading…</string>
    <string name="please_wait">Please wait…</string>
    <string name="you_dont_have_internet">Please check your Internet connection</string>
    <string name="subscribers">Subscribers :</string>
    <string name="repositories">Repositories:</string>
    <string name="see_on_web">See on Web</string>
    <string name="profile">Profile</string>
    <string name="user_not_have_repos">The user doesn\'t have repositories.</string>
    <string name="sorry_there_are_no_search_results_please_try_a_different_search">Sorry, there are no search results. Please try a different search</string>
    <string name="search_users">Search users</string>
    <string name="web_browser">Web browser</string>
</resources>
