<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="@dimen/padding_10">

        <com.ciuc.andrii.myapplication.ui.custom_views.ToolBarView
                android:id="@+id/toolbarUserInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleText="@string/profile"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageUser"
                android:layout_width="@dimen/width_150"
                android:layout_height="@dimen/height_150"
                android:layout_marginTop="@dimen/margin_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarUserInfo" />

        <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/gitHubBlack"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/margin_22"
                android:layout_marginBottom="@dimen/margin_22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/textSeeOnWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ripple_button"
                android:checked="true"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/see_on_web"
                android:padding="@dimen/padding_8"
                android:textColor="@color/gitHubBlue"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textUserName" />

        <TextView
                android:id="@+id/textRepositoriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/repositories"
                android:textColor="@color/gitHubGrey"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSeeOnWeb" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFollowers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/match_constraint"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRepositoriesTitle">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>