<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.activities.main.MainActivity">


        <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/rippleColor"
                android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_0"
                    android:paddingBottom="@dimen/padding_0">

                <ImageView
                        android:id="@+id/imageGitHub"
                        android:layout_width="@dimen/width_48"
                        android:layout_height="@dimen/height_48"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:contentDescription="@string/description_github_logo"
                        android:focusable="true"
                        android:padding="@dimen/padding_7"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_github_splash"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/editSearchRepositories"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                        android:id="@+id/editSearchRepositories"
                        android:layout_width="@dimen/width_0"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/search_users"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"
                        android:paddingStart="@dimen/padding_15"
                        android:paddingEnd="@dimen/padding_0"
                        android:fontFamily="@font/montserrat_regular"
                        android:singleLine="true"
                        android:textColor="@color/gitHubText"
                        android:textColorHint="@color/gitHubHint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                        app:layout_constraintStart_toEndOf="@+id/imageGitHub"
                        app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                        android:id="@+id/btnSearch"
                        android:layout_width="@dimen/width_48"
                        android:layout_height="@dimen/height_48"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:contentDescription="@string/description_search_repositories"
                        android:focusable="true"
                        android:padding="@dimen/padding_12"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editSearchRepositories"
                        app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/layoutNoSearch"
                android:visibility="gone"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_search_result" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_22"
                    android:layout_marginEnd="@dimen/margin_22"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/sorry_there_are_no_search_results_please_try_a_different_search" />
        </LinearLayout>

    </LinearLayout>
</layout>