<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activities.MainActivity">


    <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/rippleColor"
            android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gitHubBlack"
                android:paddingTop="@dimen/padding_0"
                android:paddingBottom="@dimen/padding_0"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/imageGitHub"
                    android:layout_width="@dimen/width_48"
                    android:layout_height="@dimen/height_48"
                    android:padding="@dimen/padding_7"
                    android:src="@drawable/cat"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ripple"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editSearchRepositories"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:contentDescription="@string/description_github_logo"/>

            <EditText
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/padding_15"
                    android:paddingEnd="@dimen/padding_0"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_background"
                    android:id="@+id/editSearchRepositories"
                    android:text="JakeWharton"
                    android:textColor="@color/gitHubText"
                    android:textColorHint="@color/gitHubHint"
                    android:hint="@string/search_repositories"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                    app:layout_constraintStart_toEndOf="@+id/imageGitHub"
                    app:layout_constraintTop_toTopOf="parent"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
            />

            <ImageView
                    android:layout_width="@dimen/width_48"
                    android:layout_height="@dimen/height_48"
                    android:padding="@dimen/padding_12"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_search"
                    android:background="@drawable/ripple"
                    android:id="@+id/btnSearch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editSearchRepositories"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:contentDescription="@string/description_search_repositories"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>