<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.activities.RepositoryInfoActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/imageOwner"
                android:layout_width="@dimen/width_120"
                android:layout_height="@dimen/height_120"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_weight="1"
                android:contentDescription="@string/decryption_image_owner"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_7"
                android:fontFamily="serif"
                android:layout_marginTop="@dimen/margin_10"
                android:id="@+id/textOwnerName"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:weightSum="3"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">
                <ImageView
                        android:layout_width="@dimen/width_35"
                        android:layout_height="@dimen/height_35"
                        android:gravity="center"
                        android:layout_marginTop="7dp"
                        android:src="@drawable/ic_start_blue"
                        android:id="@+id/imageStars"
                        android:contentDescription="@string/description_stars_image"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_15"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:id="@+id/textStars"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackground">
                <ImageView
                        android:layout_width="@dimen/width_35"
                        android:layout_height="@dimen/height_35"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin_7"
                        android:src="@drawable/ic_fork_blue"
                        android:id="@+id/imageForks"
                        android:contentDescription="@string/description_forks_image"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_15"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:id="@+id/textForks"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackground">
                <ImageView
                        android:layout_width="@dimen/width_35"
                        android:layout_height="@dimen/height_35"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin_7"
                        android:src="@drawable/ic_subscribers_blue"
                        android:id="@+id/imageSubscribers"
                        android:contentDescription="@string/description_subscribers_image"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_15"
                        android:layout_marginTop="@dimen/margin_10"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center"
                        android:layout_marginBottom="@dimen/margin_5"
                        android:id="@+id/textSubscribers"/>
            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@color/gitHubBlue"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_20"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center_vertical|start"
                android:layout_marginBottom="@dimen/margin_7"
                android:fontFamily="serif"
                android:id="@+id/textRepositoryName"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/gitHubGrey"
                android:layout_gravity="center_vertical|start"
                android:layout_marginBottom="@dimen/margin_7"
                android:fontFamily="serif"
                android:textStyle="italic"
                android:id="@+id/textRepositoryDescription"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/subscribers"
                android:textSize="@dimen/text_size_12"
                android:textColor="@color/gitHubGrey"
                android:layout_gravity="center_vertical|start"
                android:layout_marginBottom="@dimen/margin_7"
                android:fontFamily="serif"
                android:id="@+id/textSubscriberTitle"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:id="@+id/recyclerViewFollowers">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>